--- a/css/style.css
+++ b/css/style.css
@@ -36,40 +36,7 @@ a {
     font-size: 22px;
 }
 
-.card {
-    
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-}
-
-.card img{
-    object-fit: cover;
-}
-
-.card-title {
-    font-size: 16px;
-}
- .carte{
-
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    justify-content: center;
-    margin-bottom: -10px;
- }
-
- .carte img{
-    object-fit: cover;
- }
-
- .carte-title{
-    font-size: 16px;
-    margin-top: 4px;
- }
-
+ 
 
 .euro {
     font-weight: 700;
@@ -270,18 +237,38 @@ button::before {
 /****** Hebergements ***********/
 .hebergements {
     width: 65%;
+}
+
+.carte{
     
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.carte img {
+    object-fit: cover;
+}
+
+.carte-title {
+    font-size: 16px;
+}
+.hebergements-cartes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 20px;
 }
 .hebergements-title {
-    
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
-.hebergements-cartes .carte {
-    margin-top: 50px;
+ .hebergements-cartes .carte {
     
+    margin-top: 20px;
 }
 
 .hebergements-cartes img {
@@ -301,6 +288,18 @@ button::before {
     
 }
 
+.hebergements-cartes .carte-title {
+    margin-top: 10px;
+    margin-bottom: 4px;
+}
+
+.hebergements-cartes .carte-subtitle {
+     margin: 0;
+}
+
+.hebergements-cartes .carte-rating {
+    margin-bottom: 5px;
+}
 .truncate{
     width: 200px;
     white-space: nowrap;
@@ -308,17 +307,8 @@ button::before {
     text-overflow: ellipsis;
 }
 
-.hebergements-cartes {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    gap: 40px;
-   
-  }
 
-  .showmore {
+ .showmore {
     display: flex;
     justify-content: space-between;
     align-items: start;
@@ -327,21 +317,30 @@ button::before {
     font-weight: bold;
     
   }
-  .hebergements-cartes .carte-title {
-    margin-top: 4px;
-    margin-bottom: 4px;
-}
-
-
-.hebergements-cartes .carte-rating {
-    margin-bottom: 5px;
-}
+  
 
 /****** Populaires ***********/
 
 .populaires {
     width: 32%;
 }
+
+.card {
+    
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.card img{
+    object-fit: cover;
+}
+
+.card-title {
+    font-size: 16px;
+}
+
 
 .populaires-title {
     display: flex;
@@ -499,19 +498,7 @@ button::before {
         order: 2;
     }
 
-    .hebergements-cartes {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        flex-wrap: wrap;
-        gap: 1px;                
-    }
-
-    .hebergements-cartes  {
-        width: 100%;
-    }
-
+    
     .populaires-cards {
         display: flex;
         flex-direction: row;
